--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/openai": "^1.3.16",
     "@assistant-ui/react": "^0.10.2",
     "@assistant-ui/react-ai-sdk": "^0.10.3",
