--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
@@ -16,6 +17,7 @@
     "@assistant-ui/react-ai-sdk": "^0.10.3",
     "@assistant-ui/react-markdown": "^0.10.2",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
