--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@assistant-ui/react": "^0.10.2",
     "@assistant-ui/react-ai-sdk": "^0.10.3",
     "@assistant-ui/react-markdown": "^0.10.2",
+    "@modelcontextprotocol/sdk": "^1.16.0",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.6",
@@ -28,11 +29,13 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "ollama-ai-provider": "^1.2.0",
+    "openai": "^5.10.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.8"
+    "tw-animate-css": "^1.2.8",
+    "undici": "^7.12.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
