--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
-    "next": "15.3.1",
+    "next": "^15.5.2",
     "ollama-ai-provider": "^1.2.0",
     "openai": "^5.10.2",
     "react": "^19.1.0",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@modelcontextprotocol/server-filesystem": "^2025.8.21",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
     "@types/react": "^19",
