--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build"
+    "export": "next build",
+    "dev:all": "concurrently -k -n next,pty -c blue,magenta \"next dev --turbopack\" \"node mcp/pty-server.mjs\"",
+    "dev:ui": "next dev --turbopack",
+    "dev:pty": "node mcp/pty-server.mjs"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
@@ -17,15 +20,18 @@
     "@assistant-ui/react": "^0.10.2",
     "@assistant-ui/react-ai-sdk": "^0.10.3",
     "@assistant-ui/react-markdown": "^0.10.2",
-    "@modelcontextprotocol/sdk": "^1.17.0",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "ai": "^4.3.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "lucide-react": "^0.503.0",
     "next": "^15.5.2",
     "ollama-ai-provider": "^1.2.0",
@@ -35,18 +41,26 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8",
-    "undici": "^7.12.0"
+    "undici": "^7.12.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@modelcontextprotocol/sdk": "^1.17.5",
     "@modelcontextprotocol/server-filesystem": "^2025.8.21",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "node-pty": "^1.0.0",
+    "playwright": "^1.55.0",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=20.8"
   }
 }
